--- a/client/src/screens/auth/auth.css
+++ b/client/src/screens/auth/auth.css
@@ -1,3 +1,193 @@
-h1{
-    color: aquamarine;
+/* OTP PAGE */
+h2 {
+  color: #c763ff;
+  margin-bottom: 30px;
+}
+p {
+  color: #2e2e2e;
+}
+p {
+  color: #c763ff;
+}
+.container {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+  align-items: space-around;
+  justify-content: center;
+  height: 100vh;
+  background-color: transparent;
+}
+.card {
+  width: 100%;
+  padding: 10px;
+  height: 400px;
+  border: none;
+  background-color: transparent;
+}
+
+.btn-primary {
+  background: #c763ff;
+  color: #ffffff;
+  border-color: #c763ff;
+}
+.btn-primary:hover {
+  background: transparent;
+  color: #c763ff;
+}
+.btn-secondary {
+  background: #c763ff;
+  color: #ffffff;
+  border-color: none;
+  margin-right: 20px;
+}
+.btn-secondary:hover {
+  background: #c763ff;
+  color: #ffffff;
+}
+.otp-field {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  margin-right: 5px;
+  border: 2px solid #c763ff;
+  margin-bottom: 15px;
+}
+.otp-field:focus {
+  text-decoration: none;
+  background-color: #ffffff;
+  border-color: #c763ff;
+  outline: 0;
+  box-shadow: none;
+}
+.button {
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 1;
+  border-radius: 500px;
+  transition-property: background-color, border-color, color, box-shadow, filter;
+  transition-duration: 0.3s;
+  border: 3px solid #c763ff;
+  letter-spacing: 2px;
+  min-width: 140px;
+  text-transform: uppercase;
+  white-space: normal;
+  font-weight: 700;
+  text-align: center;
+  padding: 16px 14px 18px;
+  color: #616467;
+  box-shadow: inset 0 0 0 2px none;
+  background-color: transparent;
+  height: 48px;
+  margin-right: 10px;
+}
+.button:hover {
+  color: #fff;
+  background-color: #c763ff;
+  border: none;
+}
+.buttonClear {
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 1;
+  border-radius: 500px;
+  transition-property: background-color, border-color, color, box-shadow, filter;
+  transition-duration: 0.3s;
+  border: 3px solid #c763ff;
+  letter-spacing: 2px;
+  min-width: 140px;
+  text-transform: uppercase;
+  white-space: normal;
+  font-weight: 700;
+  text-align: center;
+  padding: 16px 14px 18px;
+  color: #ffffff;
+  box-shadow: inset 0 0 0 2px none;
+  background-color: #c763ff;
+  height: 48px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+.buttonClear:hover {
+  color: #fff;
+  background-color: transparent;
+  border: 3px solid #c763ff;
+  color: #c763ff;
+}
+/* Forgot */
+.text-email {
+  color: #c763ff;
+}
+.email-forgot {
+  width: 300px;
+}
+
+.cursor {
+  cursor: pointer;
+}
+.input-email {
+  display: inline;
+  width: 300px;
+  height: 50px;
+  padding-left: 10px;
+  margin-right: 5px;
+  border: 3px solid #c763ff;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  background-color: transparent;
+  margin-right: 10px;
+  color: #c763ff;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+.input-email:focus {
+  background-color: transparent;
+  border-color: #c763ff;
+  outline: 0;
+  box-shadow: none;
+  color: #c763ff;
+  font-weight: 500;
+}
+.btn-send {
+  background-color: #c763ff;
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 1;
+  border-radius: 3px;
+  transition-property: background-color, border-color, color, box-shadow, filter;
+  transition-duration: 0.3s;
+  border: 3px solid #c763ff;
+  letter-spacing: 2px;
+  min-width: 140px;
+  font-weight: 600;
+  white-space: normal;
+  font-weight: 700;
+  text-align: center;
+  padding: auto;
+  color: #ffffff;
+  box-shadow: inset 0 0 0 2px none;
+  background-color: #c763ff;
+  height: 40px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+.btn-send:hover {
+  background-color: transparent;
+  border: 3px solid #c763ff;
+  color: #fff;
+  color: #c763ff;
+}
+.btn-send:focus {
+  color: #fff;
+  background-color: transparent;
+  border: 3px solid #c763ff;
+  color: #c763ff;
+  box-shadow: transparent;
 }
