--- a/client/src/screens/auth/auth.css
+++ b/client/src/screens/auth/auth.css
@@ -336,6 +336,7 @@ a {
   position: absolute;
   top: 100px;
   left: 0px;
+  padding-top: 10px;
   width: 120px !important;
   background-color: #E040FB;
   border-top-right-radius: 50px;
