--- a/client/src/screens/investor/investor.css
+++ b/client/src/screens/investor/investor.css
@@ -50,3 +50,19 @@
     font-size: 20px;
     color: white;
 }
+
+.post-btn{
+    background-color: #E040FB;
+    color: white;
+    margin-left: 10px;
+    border-radius: 50px;
+    width: 180px;
+    height: 40px;
+    font-size: 16px;
+    text-align: left;
+    padding-left: 20px;
+}
+
+.post-btn i{
+    margin-right: 10px;
+}
