--- a/client/src/screens/investor/investor.css
+++ b/client/src/screens/investor/investor.css
@@ -66,3 +66,67 @@
 .post-btn i{
     margin-right: 10px;
 }
+
+.post{
+    width: 600px;
+    padding: 20px;
+    border: 3px solid #E040FB;
+    border-radius: 10px;
+}
+
+.post h4{
+    font-size: 18px;
+    margin: 0;
+    padding: 0;
+}
+
+.post h5{
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+
+.hot-topic{
+    width: 250px;
+    height: 100px;
+    background-color: rgb(218, 218, 218);
+    border-radius: 10px;
+    padding: 5px;
+    overflow: hidden;
+    margin-top: 10px;
+}
+
+.hot-topic h4{
+    font-size: 18px;
+    margin: 5px;
+    color: #E040FB;
+}
+
+.hot-topic p{
+    font-size: 14px;
+    margin-left: 10px;
+    color: #3b3b3b;
+}
+
+.profile-img{
+    width: 60px;
+}
+
+.profile-img .img{
+    height: 50px;
+    width: 50px;
+    background-color: #8d8d8d;
+    border-radius: 50px;
+}
+
+.post p {
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.post i {
+    color: #8d8d8d;
+    font-size: 20px;
+    margin: 5px;
+}
