--- a/client/src/screens/investor/investor.css
+++ b/client/src/screens/investor/investor.css
@@ -72,6 +72,7 @@
     padding: 20px;
     border: 3px solid #E040FB;
     border-radius: 10px;
+    margin-top: 10px;
 }
 
 .post h4{
@@ -118,6 +119,13 @@
     width: 50px;
     background-color: #8d8d8d;
     border-radius: 50px;
+}
+
+.profile-img .img img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+    object-fit: cover;
 }
 
 .post p {
