--- a/client/src/screens/reviewer/reviewer.css
+++ b/client/src/screens/reviewer/reviewer.css
@@ -138,3 +138,36 @@
     font-size: 20px;
     margin: 5px;
 }
+
+
+.create{
+    height: 400px;
+    border: 4px solid #E040FB;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.create textarea{
+    border: none;
+    background-color: transparent;
+    width: 100%;
+    height: 320px;
+    resize: none;
+}
+
+.create textarea:focus{
+    border: none;
+    background-color: transparent;
+    outline: none;
+}
+
+.create i{
+    font-size: 18px;
+    margin-left: 15px;
+    color: #E040FB;
+    cursor: pointer;
+}
+
+.create-post button{
+    height: 35px;
+}
