--- a/client/src/screens/reviewer/reviewer.css
+++ b/client/src/screens/reviewer/reviewer.css
@@ -194,3 +194,13 @@
     border-radius: 10px;
     margin-right: 5px;
 }
+
+
+.dummyClass{
+    display: none;
+    color: #14279B;
+    color: #3D56B2;
+    color: #5C7AEA;
+    color: #E6E6E6;
+  
+  }
