--- a/client/src/screens/reviewer/reviewer.css
+++ b/client/src/screens/reviewer/reviewer.css
@@ -1,206 +1,276 @@
-.row{
-    margin: 0;
-    padding: 0;
+.row {
+	margin: 0;
+	padding: 0;
 }
 
-
-.title{
-    background-color: #E040FB;
-    padding: 10px;
-    width: 200px;
-    height: 40px;
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
-}
-
-.title .text{
-    font-size: 18px;
-    color: white;
-}
 
 .has-search .form-control {
-    padding-left: 2.375rem;
-    border-radius: 50px;
+	padding-left: 2.375rem;
+	border-radius: 50px;
 }
 
 .has-search .form-control-feedback {
-    padding-left: 10px;
-    position: absolute;
-    z-index: 2;
-    display: block;
-    width: 2.375rem;
-    height: 2.375rem;
-    line-height: 2.375rem;
-    text-align: center;
-    pointer-events: none;
-    color: #aaa;
+	padding-left: 10px;
+	position: absolute;
+	z-index: 2;
+	display: block;
+	width: 2.375rem;
+	height: 2.375rem;
+	line-height: 2.375rem;
+	text-align: center;
+	pointer-events: none;
+	color: #aaa;
 }
 
-.profile{
-    margin-right: 20px;
+.profile {
+	margin-right: 20px;
 }
 
-.profile i{
-    padding-top: 5px;
-    width: 40px;
+.profile i {
+	padding-top: 5px;
+	width: 40px;
+	height: 40px;
+	background-color: #e040fb;
+	text-align: center;
+	border-radius: 50px;
+	font-size: 20px;
+	color: white;
+}
+
+.post-btn {
     height: 40px;
-    background-color: #E040FB;
-    text-align: center;
-    border-radius: 50px;
-    font-size: 20px;
-    color: white;
-}
-
-.post-btn{
-    background-color: #E040FB;
-    color: white;
-    margin-left: 10px;
-    border-radius: 50px;
-    width: 180px;
-    height: 40px;
-    font-size: 16px;
-    text-align: left;
-    padding-left: 20px;
-}
-
-.post-btn i{
-    margin-right: 10px;
-}
-
-.post{
-    width: 600px;
-    padding: 20px;
-    border: 3px solid #E040FB;
-    border-radius: 10px;
+    width: 150px;
     margin-top: 10px;
-}
-
-.post h4{
-    font-size: 18px;
-    margin: 0;
-    padding: 0;
-}
-
-.post h5{
-    font-size: 16px;
-    margin: 0;
-    padding: 0;
-}
-
-
-.hot-topic{
-    width: 250px;
-    height: 100px;
-    background-color: rgb(218, 218, 218);
-    border-radius: 10px;
-    padding: 5px;
-    overflow: hidden;
-    margin-top: 10px;
-}
-
-.hot-topic h4{
-    font-size: 18px;
-    margin: 5px;
-    color: #E040FB;
-}
-
-.hot-topic p{
+    margin-bottom: 10px;
+    transition: 0.8s ease;
+    background-color: #14279B;
+    color: #E6E6E6;
     font-size: 14px;
-    margin-left: 10px;
-    color: #3b3b3b;
+    border-radius: 2rem;
+    font-weight: bold;
+    border: none;
+}
+.post-btn:hover{
+    transition: 0.8s ease;
+    background-color: #E6E6E6;
+    color: #14279B;
+    font-weight: bold;
+    border: 1px solid #14279B;
+}
+.post-btn:focus{
+    transition: 0.8s ease;
+    background-color: #E6E6E6;
+    color: #14279B;
+    font-weight: bold;
+    border: 1px solid #14279B;
 }
 
-.profile-img{
-    width: 60px;
+
+.profile-img {
+	width: 60px;
 }
 
-.profile-img .img{
-    height: 50px;
-    width: 50px;
-    background-color: #8d8d8d;
-    border-radius: 50px;
+.profile-img .img {
+	height: 50px;
+	width: 50px;
+	background-color: #8d8d8d;
+	border-radius: 50px;
 }
 
-.profile-img .img img{
-    width: 100%;
-    height: 100%;
-    border-radius: 50px;
-    object-fit: cover;
+.profile-img .img img {
+	width: 100%;
+	height: 100%;
+	border-radius: 50px;
+	object-fit: cover;
 }
 
 .post p {
-    font-size: 14px;
-    margin-top: 10px;
+	font-size: 14px;
+	margin-top: 10px;
 }
 
 .post i {
-    color: #8d8d8d;
-    font-size: 20px;
-    margin: 5px;
+	color: #8d8d8d;
+	font-size: 20px;
+	margin: 5px;
 }
 
-
-.create{
-    height: 400px;
-    border: 4px solid #E040FB;
-    border-radius: 10px;
-    padding: 20px;
+.create {
+	height: 400px;
+	border: 4px solid #14279b;
+	border-radius: 10px;
+	padding: 0px;
+    box-shadow: 2px 2px 15px 2px #5C7AEA
 }
 
-.create textarea{
-    border: none;
-    background-color: transparent;
-    width: 100%;
-    height: 320px;
-    resize: none;
+.create textarea {
+	border: none;
+	background-color: #e6e6e6;
+    padding:30px;
+    border-radius: 5px;
+	width: 100%;
+	height: 320px;
+	resize: none;
 }
 
-.create textarea:focus{
-    border: none;
-    background-color: transparent;
-    outline: none;
+.create textarea:focus {
+	background-color: #e6e6e6;
+	outline: none;
 }
 
-.create i{
-    font-size: 18px;
-    margin-left: 15px;
-    color: #E040FB;
-    cursor: pointer;
+.create i {
+	font-size: 18px;
+	margin-left: 15px;
+    margin-top:15px;
+	color: #14279b;
+	cursor: pointer;
 }
 
 .create-post button{
-    height: 35px;
-}
-
-.create-post .tags-input{
-    width: 100%;
-    border: none;
-    background-color: transparent;
-}
-
-.create-post .tags-input:focus{
-    border: none;
-    background-color: transparent;
-    outline: none;
-    box-shadow: none;
-}
-
-.create-post .tag{
-    background-color: #8d8d8d;
-    color: white;
-    padding: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
-    border-radius: 10px;
-    margin-right: 5px;
-}
-
-
-.dummyClass{
-    display: none;
-    color: #14279B;
-    color: #3D56B2;
-    color: #5C7AEA;
+    width:100px;
+    text-align: center;
+    height: 40px;
+    margin-top: 30px;
+    transition: 0.8s ease;
+    background-color: #14279B;
     color: #E6E6E6;
-  
-  }
+    font-size: 14px;
+    border-radius: 2rem;
+    font-weight: bold;
+    border: none;
+}
+.create-post button:hover{
+    transition: 0.8s ease;
+    background-color: #E6E6E6;
+    color: #14279B;
+    font-weight: bold;
+    border: 1px solid #14279B;
+}
+.create-post button:focus{
+    transition: 0.8s ease;
+    background-color: #E6E6E6;
+    color: #14279B;
+    font-weight: bold;
+    border: 1px solid #14279B;
+}
+
+.create-post .tags-input {
+	width: 100%;
+	border: none;
+	background-color: transparent;
+}
+
+.create-post .tags-input:focus {
+	border: none;
+	background-color: transparent;
+	outline: none;
+	box-shadow: none;
+}
+
+.create-post .tag {
+	background-color: #8d8d8d;
+	color: white;
+	padding: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
+	border-radius: 10px;
+	margin-right: 5px;
+}
+
+.timelineBar .timelineButton {
+	text-align: center;
+	height: 40px;
+	width: 100px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	transition: 0.8s ease;
+	background-color: #14279b;
+	color: #e6e6e6;
+	font-size: 14px;
+	border-radius: 2rem;
+	font-weight: bold;
+	border: none;
+}
+
+.timelineBar .timelineButton:hover {
+	transition: 0.8s ease;
+	background-color: #e6e6e6;
+	color: #14279b;
+	font-weight: bold;
+	border: 1px solid #14279b;
+}
+
+
+.title {
+    margin-top:0;
+    margin-left:0;
+	background-color: #14279b;
+	padding: 10px;
+	width: 170px;
+	height: 40px;
+    text-align: center;
+}
+
+.title .text {
+	color: #e6e6e6;
+    font-weight: bold;
+}
+
+.hot-topic {
+	width: 250px;
+	height: 100px;
+	background-color: #e6e6e6;
+	border-radius: 10px;
+	padding: 5px;
+	overflow: hidden;
+	margin-top: 10px;
+}
+.hot-topic h4 {
+	font-size: 18px;
+	margin: 5px;
+	color: #14279b;
+}
+
+.hot-topic p {
+	font-size: 14px;
+	margin-left: 10px;
+	color: #3b3b3b;
+}
+
+.post {
+	width: 600px;
+	padding: 20px;
+	border: none !important;
+	border-radius: 10px;
+	margin-top: 10px;
+    background-color: #e6e6e6;
+}
+
+.post h4 {
+    color:#3d56b2;
+	margin: 0;
+	padding: 0;
+}
+
+.post h5 {
+	font-size: 16px;
+	margin: 0;
+	padding: 0;
+}
+.carousel *{
+    border-radius: 5px;
+    text-align: center;
+}
+.carousel p{
+    font-size: 12px;
+    font-weight: bold;
+    margin: 10px;
+}
+
+.dummyClass {
+	display: none;
+	color: #14279b;
+	color: #3d56b2;
+	color: #5c7aea;
+	color: #e6e6e6;
+}
