--- a/client/src/screens/reviewer/reviewer.css
+++ b/client/src/screens/reviewer/reviewer.css
@@ -22,20 +22,7 @@
 	color: #aaa;
 }
 
-.profile {
-	margin-right: 20px;
-}
 
-.profile i {
-	padding-top: 5px;
-	width: 40px;
-	height: 40px;
-	background-color: #e040fb;
-	text-align: center;
-	border-radius: 50px;
-	font-size: 20px;
-	color: white;
-}
 
 .post-btn {
     height: 40px;
@@ -266,6 +253,60 @@
     font-weight: bold;
     margin: 10px;
 }
+
+.dropbtn {
+	margin-right: 20px;
+    width:50px;
+    height: 50px;
+    border-radius: 30px;
+    text-align: center;
+}
+
+.dropbtn i{
+	padding-top:10px;
+	background-color: transparent;
+	font-size: 20px;
+	color: #e6e6e6;
+}
+.dropbtn i:hover{
+    transition: 0.8s ease;
+	background-color: transparent;
+	color:white;
+}
+
+.dropbtn {
+    background-color: #14279b;
+    border-radius: 50px;
+  }
+  
+  .dropdown {
+      right:0;
+      top:0;
+    margin-right: 20px;
+    float: right;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #e6e6e6;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: #14279b;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {transition: 0.8s ease; background-color: #e6e6e6;}
+  
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  .dropdown:hover .dropbtn { transition: 0.8s ease; background-color: #14279b;}
 
 .dummyClass {
 	display: none;
